<resources>
    <string name="app_name">БТПИТ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ГБПОУ ВО\nБорисоглебский техникум\nпромышленных и\nинформационных\nтехнологий</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Главное меню</string>
    <string name="menu_worlds_skills">WorldSkills</string>
    <string name="menu_about">О Компетенции</string>
    <string name="menu_po">Программное обеспечение</string>


    <string name="android_text">Android Studio - Интегрированная среда разработки для работы с платформой Android</string>
    <string name="net_text">NetBeans - Свободная интегрированная среда разработки приложений на различных языках программирования</string>
    <string name="eclipce_text">Eclipse IDE for Java Developers - Свободная интегрированная среда разработки модульных кроссплатформенных приложений</string>
    <string name="xd_text">Adobe XD - Программа для разработки интерфейсов</string>
    <string name="photoshop_text">Adobe Photoshop - это мощный набор инструментов для обработки цифровых изображений</string>
    <string name="illustrator_text">Adobe illustrator - это программное обеспечение для создания векторной графики, которую можно уменьшить до размеров экрана смартфона или увеличить до размеров билборда - без ущерба для качества и четкости изображения</string>
    <string name="msv_text">Microsoft Visual Studio Community - Данные продукты позволяют разрабатывать как консольные приложения так и декстопные</string>

    <string name="loading_text">F6 Разработка\nмобильных приложений</string>
    <string name="main_text_btpit"> ГБПОУ ВО «БТПИТ» образовано в соответствии с постановлением правительства Воронежской области от 20 мая 2015 года № 401 в результате реорганизации в форме слияния государственного образовательного бюджетного учреждения среднего профессионального образования Воронежской области «Борисоглебский индустриальный техникум», государственного образовательного бюджетного учреждения среднего профессионального образования Воронежской области «Борисоглебский техникум информатики и вычислительной техники» и государственного образовательного бюджетного учреждения начального профессионального образования Воронежской области «Профессиональное училище № 34 г. Борисоглебска», зарегистрировано в качестве юридического лица 11 сентября 2015 г. \n \t В настоящее время в техникуме реализуется следующие специальности и профессии:\n 09.02.01 Компьютерные системы и комплексы\n 09.02.04 Информационные системы (по отраслям)\n 09.02.05 Прикладная информатика (по отраслям)\n 09.02.07 Информационные системы и программирование\n 15.02.08 Технология машиностроения\n 38.02.01 Экономика и бухгалтерский учет (по отраслям)\n 40.02.01 Право и организация социального обеспечения\n 44.02.01 Дошкольное образование\n 44.02.05 Коррекционная педагогика в начальном образовании\n 43.02.13 Технология парикмахерского искусства\n 15.01.05 Сварщик\n 43.01.09 Повар, кондитер</string>
    <string name="main_text_world_skil">Союз «Молодые профессионалы (Ворлдскиллс Россия)» – официальный оператор международного некоммерческого движения WorldSkills International, миссия которого – повышение стандартов подготовки кадров.\n \t Наш девиз: «Делай мир лучше силой своего мастерства!» («Improving the world with the power of skills!»).\n \t Раз в два года одна из 84 стран-участниц движения проводит мировой чемпионат профессионального мастерства. В 2019-м он прошел в России (WorldSkillsKazan 2019).\n \t WorldSkills Russia проводит всероссийские чемпионаты профессионального мастерства по пяти направлениям:\n \t Конкурсы профессионального мастерства между студентами колледжей и техникумов в возрасте до 22 лет. Раз в год победители региональных первенств соревнуются на Национальном финале «Молодые профессионалы» (WorldSkillsRussia). Из победителей формируется расширенный состав национальной сборной для участия в мировом чемпионате WorldSkills Competition. С 2017 года появилась отдельная возрастная линейка – юниоры WorldSkills (16 и младше лет).\n \t Корпоративные чемпионаты, которые проводятся на производственных площадках крупнейших российских компаний. В них принимают участие молодые рабочие в возрасте от 16 до 28 лет. Победители представляют свою корпорацию на ежегодном финале WorldSkills Hi-Tech.\n \t Чемпионат в сфере высокотехнологичных профессий IT-сектора – DigitalSkills. Участники – студенты профильных вузов и колледжей, а также специалисты крупнейших компаний, включая «Лабораторию Касперского», «Кибер Россию», «Ростелеком» и «Фирму «1C». Возрастное ограничение – до 28 лет.\n \t AgroSkills – отраслевой чемпионат профессионального мастерства среди сотрудников компаний из сектора сельского хозяйства (возраст 18-28 лет). Соорганизатор – Министерство сельского хозяйства РФ. Проводится по трем компетенциям: «агрономия», «ветеринария», «эксплуатация сельскохозяйственных машин».\n \t Межвузовский чемпионат по стандартам WorldSkills – конкурс профессионального мастерства между студентами высших учебных заведений. Победители вузовских чемпионатов встречаются в национальном финале.\n \t Помимо организации чемпионатов, Союз «Молодые профессионалы (Ворлдскиллс Россия)» занимается внедрением мировых стандартов в национальную систему средне-специального и высшего образования. В 2017 году около 14 тысяч выпускников колледжей и техникумов в 26 регионах России впервые сдали демонстрационный экзамен по стандартам WorldSkills Russia. По сути, прошли через единственную в России независимую оценку практических навыков. По итогам испытания, студенты получили Skills-паспорта, а работодатели - чётко структурированную информацию о профессиональном уровне молодых специалистов</string>
    <string name="main_text_about">Основная задача специалиста по разработке мобильных приложений — создание продукта, сочетающего в себе безотказную работу на одной из мобильных операционных платформ (Apple iOS, Google Android), удобный пользовательский интерфейс, многофункциональность.\n \t Мобильные разработчики создают, тестируют и внедряют мобильные приложения. Их работа включает в себя написание программ в мобильной среде с использованием языков программирования и среды разработки программного обеспечения для конкретной платформы.\n \t Разработчику требуются навыки проектирования пользовательского интерфейса, разработки кроссплатформенных приложений, серверных вычислений, программирования на современном языке, а также знание принципов бизнеса и маркетинга.\n \t Разработка мобильных приложений – быстрорастущая отрасль, поскольку мобильные устройства становятся центральным элементом общения и работы.\n</string>
</resources>