<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.menu12.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_worldskill"
        android:name="com.example.menu12.ui.worldskills.WorldSkillsFragment"
        android:label="@string/menu_worlds_skills"
        tools:layout="@layout/fragment_world_skills" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.menu12.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_po"
        android:name="com.example.menu12.ui.po.POFragment"
        android:label="@string/menu_po"
        tools:layout="@layout/fragment_p_o" />
</navigation>